# tritonBLAS

./: .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python_package.yaml
.glog/: glog-scan.sarif
benchmarks/: benchmark_autotuning.py  heuristic_benchmark.py  torch_matmul.py  tritonblas_matmul.py
datasets/: generate_grid.py
docs/: CONTRIBUTING.md  CONTRIBUTORS.md
examples/: example_matmul.py  example_matmul_lt.py
include/tritonblas/: __init__.py  matmul.py  origami.py
include/tritonblas/internal/: persistent_matmul.py  streamk_matmul.py
tests/: test_matmul.py  test_matmul_lt.py  test_persistent_matmul_lt.py  test_streamk_matmul_lt.py
tools/: benchmark_dash.py  example.json  export_config.py  tile_sweep.py
